<resources>
    <string name="app_name">MySchedule</string>
    <string name="tab_item1">오늘</string>
    <string name="tab_item2">이번주</string>
    <string name="tab_item3">이번달</string>
    <string name="circle">circle</string>
    <string name="input">입력</string>
    <string name="cancel">취소</string>
    <string name="_24">24</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_13">13</string>
    <string name="_12">12</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="year">년</string>
    <string name="hint1"> year</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="hour">시</string>
    <string name="minute">분</string>
    <string name="_0">0</string>
    <string name="daily_schedule">일일 일정</string>
    <string name="period_schedule">기간 일정</string>
    <string name="date_schedule">하루 일정</string>
    <string name="rd_btn1">반복</string>
    <string name="rd_btn2">일회성</string>
    <string name="rd_btn3">기간</string>
    <string name="confirm">확인</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="everyday">일일</string>
    <string name="checkBoxTxt">전부 선택</string>
    <string name="contentTitle">일정 제목 :</string>
    <string name="inputTitle">제목을 입력하세요</string>
    <string name="searchBtnDescription">검색 버튼</string>
    <string name="delete">삭제</string>
    <string name="etTextHint">일정을 입력하세요</string>
    <string name="tv2Txt">일정 내용 :</string>
    <string name="tv0Txt">유형 :</string>
    <string name="datePickerHint">calendarBtn</string>
    <string name="int_placeholder">%d</string>
    <string name="calendar_text">%d년 %d월</string>
    <string name="_schedule">일정</string>
    <string name="_content">내용</string>
    <string name="adapter_text1">%1$s시 %2$s분 ~ %3$s시 %4$s분</string>
    <string name="adapter_text2">%1s\n%2$s시 %3$s분 ~ %4$s시 %5$s분</string>
    <string name="adapter_text3">%1s~%2s\n%3$s시 %4$s분 ~ %5$s시 %6$s분</string>
</resources>