<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:gravity="center" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="30dp"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/_7"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_8"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_9"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_10"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_11"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_12"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_13"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_14"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_15"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_16"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_17"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_18"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_19"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_20"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_21"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_22"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
                <TextView
                    android:text="@string/_23"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
            </LinearLayout>
            <FrameLayout
                android:id="@+id/frame_1"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/frame_border">
            </FrameLayout>
            <FrameLayout
                android:id="@+id/frame_2"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/frame_border">
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/frame_border">
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_4"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/frame_border">
            </FrameLayout>
            <FrameLayout
                android:id="@+id/frame_5"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/frame_border">
            </FrameLayout>
            <FrameLayout
                android:id="@+id/frame_6"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/frame_border">
            </FrameLayout>
            <FrameLayout
                android:id="@+id/frame_7"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/frame_border">
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
