<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/circle_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/circle" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:id="@+id/clock_Layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:id="@+id/Center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="KeyboardInaccessibleWidget" />
        <TextView
            android:id="@+id/clockTime_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="0"/>
        <TextView
            android:id="@+id/clockTime_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="15"/>
        <TextView
            android:id="@+id/clockTime_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="30"/>
        <TextView
            android:id="@+id/clockTime_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="45"/>
        <TextView
            android:id="@+id/clockTime_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="60"/>
        <TextView
            android:id="@+id/clockTime_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="75"/>
        <TextView
            android:id="@+id/clockTime_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="90"/>
        <TextView
            android:id="@+id/clockTime_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="105"/>
        <TextView
            android:id="@+id/clockTime_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="120"/>
        <TextView
            android:id="@+id/clockTime_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="135"/>
        <TextView
            android:id="@+id/clockTime_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="150"/>
        <TextView
            android:id="@+id/clockTime_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_11"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="165"/>
        <TextView
            android:id="@+id/clockTime_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="180"/>
        <TextView
            android:id="@+id/clockTime_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_13"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="195"/>
        <TextView
            android:id="@+id/clockTime_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_14"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="210"/>
        <TextView
            android:id="@+id/clockTime_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="225"/>
        <TextView
            android:id="@+id/clockTime_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_16"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="240"/>
        <TextView
            android:id="@+id/clockTime_17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_17"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="255"/>
        <TextView
            android:id="@+id/clockTime_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_18"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="270"/>
        <TextView
            android:id="@+id/clockTime_19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_19"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="285"/>
        <TextView
            android:id="@+id/clockTime_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="300"/>
        <TextView
            android:id="@+id/clockTime_21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_21"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="315"/>
        <TextView
            android:id="@+id/clockTime_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_22"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="330"/>
        <TextView
            android:id="@+id/clockTime_23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_23"
            app:layout_constraintCircle="@id/Center"
            app:layout_constraintCircleRadius="160dp"
            app:layout_constraintCircleAngle="345"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:id="@+id/watchCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="KeyboardInaccessibleWidget">
    </FrameLayout>
    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/touchScreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="KeyboardInaccessibleWidget"/>
</androidx.constraintlayout.widget.ConstraintLayout>
