<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text0"
        android:text="유형 : "
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.1"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/list"
        app:layout_constraintStart_toStartOf="@id/text0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text0"
        app:layout_constraintBottom_toBottomOf="@id/text0"
        app:layout_constraintHorizontal_bias="0.3">
    </Spinner>
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="일정 제목 : "
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text0"
        app:layout_constraintTop_toBottomOf="@id/text0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/text1"
        app:layout_constraintTop_toTopOf="@id/text1"
        app:layout_constraintBottom_toBottomOf="@id/text1"
        app:layout_constraintWidth_percent="0.5"/>
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="일정 내용 : "
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintStart_toStartOf="@id/text1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/text2"
        app:layout_constraintTop_toTopOf="@id/text2"
        app:layout_constraintBottom_toBottomOf="@id/text2"
        app:layout_constraintWidth_percent="0.5"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.IconButton.Filled"
        app:icon="@drawable/calendar_icon"
        android:id="@+id/DatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/etYear"
        android:textStyle="bold"
        android:gravity="bottom|center"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="number"
        android:layout_marginStart="8dp"
        android:maxLength="4"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@id/DatePicker"
        app:layout_constraintStart_toEndOf="@id/DatePicker"
        app:layout_constraintTop_toTopOf="@id/DatePicker"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/etYear"
        app:layout_constraintTop_toTopOf="@+id/etYear"
        app:layout_constraintBottom_toBottomOf="@+id/etYear"/>



    <EditText
        android:textStyle="bold"
        android:gravity="bottom|center"
        android:id="@+id/etMonth"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/text3"
        app:layout_constraintBottom_toBottomOf="@+id/etYear"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/month"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/etYear"
        app:layout_constraintBottom_toBottomOf="@+id/etYear"
        app:layout_constraintStart_toEndOf="@+id/etMonth" />

    <EditText
        android:id="@+id/etDay"
        android:textStyle="bold"
        android:gravity="bottom|center"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/text4"
        app:layout_constraintBottom_toBottomOf="@+id/etYear"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text5"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/day"
        app:layout_constraintTop_toTopOf="@+id/etDay"
        app:layout_constraintStart_toEndOf="@+id/etDay"
        app:layout_constraintBottom_toBottomOf="@+id/etYear"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="전부 선택"
        app:layout_constraintStart_toStartOf="@id/DatePicker"
        app:layout_constraintTop_toBottomOf="@id/DatePicker"/>
    <Button
        android:text="삭제"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@id/checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkbox"
        app:layout_constraintBottom_toBottomOf="@id/checkbox"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/checkbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.IconButton.Filled"
        app:icon="@drawable/baseline_content_paste_search_48"
        android:id="@+id/Search_Btn"
        app:iconSize="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintHorizontal_bias="0.9"/>


</androidx.constraintlayout.widget.ConstraintLayout>